[project]
name = "xenoflow"
description = "Implementation of Instance nodes, Replicate nodes, and standard Save UI to improve the workflow into ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/jerome7562/ComfyUI-XenoFlow"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "3eedd79c-93a7-4f05-b6f3-e8a4a52e216b"
DisplayName = "ComfyUI-XenoFlow"
Icon = ""
