[project]
name = "xenoflow"
description = "Implementation of Instance nodes, Replicate nodes, and standard Save UI to improve the workflow into ComfyUI."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/jerome7562/ComfyUI-XenoFlow"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jerome7562"
DisplayName = "ComfyUI-XenoFlow"
Icon = ""
